--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,7 @@
     );
   background-size: cover;
   background-attachment: fixed;
-  font-variation-settings: "wght" 400;
+  font-variation-settings: var(--text-font-weight);
   min-inline-size: 320px;
   min-block-size: 100dvb;
 }
@@ -82,7 +82,6 @@
   font-size: 14px;
   text-shadow: -1px 0 var(--label-stroke-color), 0 1px var(--label-stroke-color),
     1px 0 var(--label-stroke-color), 0 -1px var(--label-stroke-color);
-  font-variation-settings: "wght" 400;
   mix-blend-mode: hard-light;
   inset-inline-end: 25px;
   inset-block-start: 27px;
@@ -128,22 +127,30 @@
 }
 
 .like-icon .heart {
-  transition: fill 0.1s;
   transform-origin: center center;
 }
 
 .like-icon .contour {
   fill: var(--text-color);
+  transition-delay: 0.06s;
+  transition-duration: 0.3s;
+  transition-property: fill;
+  transition-timing-function: ease-in;
 }
 
 .like-icon .main-body {
   fill: var(--page-background);
-  transition: fill 0.3s linear;
+  transition-duration: 0.3s;
+  transition-property: fill;
+  transition-timing-function: linear;
 }
 
 .like-icon .core {
   fill: var(--page-background);
-  transition: fill 0.3s 0.05s;
+  transition-delay: 0.03s;
+  transition-duration: 0.3s;
+  transition-property: fill;
+  transition-timing-function: linear;
 }
 
 .like-icon .sparks {
@@ -153,30 +160,45 @@
 
 .like-icon:hover .main-body {
   fill: var(--text-color);
+  transition-delay: 0.05s;
+  transition-duration: 0.3s;
 }
 
 .like-icon:hover .core {
   fill: var(--text-color);
+  transition-delay: 0s;
+  transition-duration: 0.3s;
 }
 
 .like-icon:active .main-body {
   fill: var(--heart-color);
+  transition-delay: 0.05s;
+  transition-duration: 0.3s;
 }
 
 .like-icon:active .core {
   fill: var(--heart-color);
+  transition-delay: 0s;
+  transition-duration: 0.3s;
 }
 
 .like-icon.is-liked .contour {
   fill: var(--heart-color);
+  transition-delay: 0.06s;
+  transition-duration: 0.3s;
+  transition-property: fill;
+  transition-timing-function: ease-in;
 }
 
 .like-icon.is-liked .main-body {
   fill: var(--heart-color);
+  transition-delay: 0.05s;
+  transition-duration: 0.3s;
 }
 
 .like-icon.is-liked .core {
   fill: var(--heart-color);
+  transition-delay: 0s;
 }
 
 /* Кнопки */
@@ -188,8 +210,9 @@
   color: var(--mix-blend-color);
   font-family: var(--fantasy-font-family);
   font-size: 14px;
-  background: none;
-  transition: 0.5s ease-in-out;
+  background: transparent;
+  transition-duration: 0.3s;
+  transition-timing-function: ease;
   cursor: pointer;
 }
 
@@ -270,6 +293,7 @@
 
 .header__link {
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  line-height: 1;
   text-transform: uppercase;
 }
 
@@ -277,6 +301,7 @@
   margin-block-start: 20px;
   margin-block-end: 25px;
   font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  line-height: 1;
   text-transform: uppercase;
 }
 
@@ -313,7 +338,7 @@
   opacity: 1;
   overflow: hidden;
   text-transform: uppercase;
-  background: none;
+  background: transparent;
   transition: opacity 0.3s ease;
   cursor: pointer;
 }
@@ -376,7 +401,7 @@
   padding-inline: 10px;
   padding-block: 4px;
   font-size: 18px;
-  font-variation-settings: "wght" 700;
+  font-variation-settings: var(--title-font-weight);
 }
 
 .card__image {
